Include app- prefix in BEM Block class name

--- a/app/templates/components/chat-room-info.hbs
+++ b/app/templates/components/chat-room-info.hbs
@@ -1,4 +1,4 @@
-<div class="chat-room-info__section">
+<div class="app-chat-room-info__section">
   <div class="mdl-list">
     <span class="mdl-list__item">
       <span class="mdl-list__item-primary-content">
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class="chat-room-info__section">
+<div class="app-chat-room-info__section">
   <div class="app-room-info__actions">
     <div class="app-room-info__action">
       <i class="material-icons" tabindex="0" onclick={{action "showInviteDialog"}}>add</i>
@@ -35,8 +35,8 @@
   </div>
 </div>
 
-<div class="chat-room-info__section">
-  <h2 class="chat-room-info__section-title mdl-typography--caption mdl-typography--text-uppercase">Members</h2>
+<div class="app-chat-room-info__section">
+  <h2 class="app-chat-room-info__section-title mdl-typography--caption mdl-typography--text-uppercase">Members</h2>
 
   <hr/>
 
