Add attribute in Room resource to determine unread messages
Currently we had no way to determine whether there are unread
messages within a room. This commit includes the uiUnread computed
attribute which goes through the list of unread messages to
deteremine whether there are messages marked as unread in the
room. This attribute observe the current logged in user's list of
unread messages.

--- a/app/templates/components/chat-room-item.hbs
+++ b/app/templates/components/chat-room-item.hbs
@@ -8,8 +8,10 @@
     <span>{{room.uiName}}</span>
   </span>
   <span class="mdl-list__item-secondary-content">
-    <span class="mdl-list__item-secondary-action">
-      <i class="material-icons">chat_bubble</i>
+    <span class="mdl-list__item-secondary-action mdl-color-text--accent">
+      {{#if room.uiUnread}}
+        <i class="material-icons">chat_bubble</i>
+      {{/if}}
     </span>
   </span>
   <div class="mdl-ripple"></div>
