Include number of rooms who have unseen updates
This commit includes a badge in the Rooms tab showing the number of
rooms who have updates unseen by the logged in user.

--- a/app/templates/components/chat-sidebar.hbs
+++ b/app/templates/components/chat-sidebar.hbs
@@ -37,7 +37,9 @@
         <span class="mdl-badge mdl-badge--overlap">Colleagues</span>
       </a>
       <a href="#rooms-panel" class="mdl-tabs__tab">
-        <span class="mdl-badge mdl-badge--overlap">Rooms</span>
+        <span class="mdl-badge mdl-badge--overlap" data-badge="{{updates}}">
+          Rooms
+        </span>
       </a>
     </div>
 
