Move check to room updates from Room model

--- a/app/templates/components/chat-room-item.hbs
+++ b/app/templates/components/chat-room-item.hbs
@@ -9,7 +9,7 @@
   </span>
   <span class="mdl-list__item-secondary-content">
     <span class="mdl-list__item-secondary-action mdl-color-text--accent">
-      {{#if room.uiUnread}}
+      {{#if hasUpdates}}
         <i class="material-icons">chat_bubble</i>
       {{/if}}
     </span>
