Hide DOM when no items match the current filter
Currently when no items match the current filter, the filter dialog
showed an empty un ordered list. Due to the padding of the <ul> tag
this was creating an empty space in the dialog. This commit changes
this so that if no items match the current filter string, the <ul>
tag is not rendered.

--- a/app/templates/components/chat-finder-dialog.hbs
+++ b/app/templates/components/chat-finder-dialog.hbs
@@ -9,9 +9,11 @@
     <label class="mdl-textfield__label" for="app-chat-filter-dialog__filter-field">Search...</label>
   </div>
 
-  <ul class="mdl-list">
-    {{#each items as |item|}}
-      {{component item.component data=item.data}}
-    {{/each}}
-  </ul>
+  {{#if items}}
+    <ul class="mdl-list app-chat-filter-dialog__items">
+      {{#each items as |item|}}
+        {{component item.component data=item.data}}
+      {{/each}}
+    </ul>
+  {{/if}}
 </div>
