Limit the height of the filter list
This commit limits the amount of height the dialog can resize. This
was done since when there were alot of items that match the filter
criteria the dialog was being resized out of the viewport.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,3 +14,4 @@
 @import 'components/chat-invite-dialog';
 @import 'components/chat-fab';
 @import 'components/chat-bots';
+@import 'components/chat-finder-dialog';
