Hide filter dialog when clicking on filter item
Currently when the user selects an item from the Filter dialog,
although the user is redirected accordingly, the filter dialog is
not closed. This commit changes this so that when the user selects
an item, the dialog is hidden.

--- a/app/templates/components/chat-finder-dialog.hbs
+++ b/app/templates/components/chat-finder-dialog.hbs
@@ -12,7 +12,7 @@
   {{#if items}}
     <ul class="app-chat-filter-dialog__items mdl-list">
       {{#each items as |item|}}
-        {{component item.component data=item.data}}
+        {{component item.component data=item.data ready=item.close}}
       {{/each}}
     </ul>
   {{/if}}
