Implement app-select selected items component for invite dialog

--- a/app/templates/components/app-select-chip-invite-user.hbs
+++ b/app/templates/components/app-select-chip-invite-user.hbs
@@ -1,1 +1,4 @@
-{{yield}}
+<span class="mdl-chip__text">{{item.username}}</span>
+<button class="mdl-chip__action" onclick={{action 'unselect'}}>
+  <i class="material-icons">cancel</i>
+</button>
