Implement app-selected item component for invite dialog

--- a/app/templates/components/app-select-item-invite-user.hbs
+++ b/app/templates/components/app-select-item-invite-user.hbs
@@ -1,1 +1,9 @@
-{{yield}}
+<span class="mdl-list__item-primary-content">
+  <span class="mdl-list__item-avatar">
+    <img
+      class="app--circularize app--full-width mdl-typography--caption"
+      src="/images/{{item.uiImage}}"
+      alt="{{item.username}} profile picture"/>
+  </span>
+  {{item.username}}
+</span>
