--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,7 @@
 @import 'mixins/list-item';
 @import 'utils';
 @import 'shims';
+@import 'components/app-select-invite-user';
 @import 'components/chat-sidebar';
 @import 'components/chat-room';
 @import 'components/chat-colleague-item';
