--- a/app/templates/components/app-select-chip-bot-room.hbs
+++ b/app/templates/components/app-select-chip-bot-room.hbs
@@ -1,1 +1,4 @@
-{{yield}}
+<span class="mdl-chip__text">{{item.uiName}}</span>
+<button class="mdl-chip__action" onclick={{action 'unselect'}}>
+  <i class="material-icons">cancel</i>
+</button>
