--- a/app/templates/components/app-select-item-bot-room.hbs
+++ b/app/templates/components/app-select-item-bot-room.hbs
@@ -1,1 +1,9 @@
-{{yield}}
+<span class="mdl-list__item-primary-content">
+  <span class="mdl-list__item-avatar">
+    <img
+      class="app--circularize app--full-width mdl-typography--caption"
+      src="/images/{{item.uiImage}}"
+      alt="{{item.uiName}} picture"/>
+  </span>
+  {{item.uiName}}
+</span>
