Implement bot room grant permission

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,7 @@
 @import 'utils';
 @import 'shims';
 @import 'components/app-select-item-invite-user';
+@import 'components/app-select-item-bot-room';
 @import 'components/chat-sidebar';
 @import 'components/chat-room';
 @import 'components/chat-colleague-item';
@@ -15,3 +16,4 @@
 @import 'components/chat-fab';
 @import 'components/chat-bots';
 @import 'components/chat-finder-dialog';
+@import 'components/chat-bot-dialog';
